<resources>
    <string name="appName">NotiPlan</string>

    <string name="headerText">Welcome to NotiPlan</string>
    <string name="settingsText">Settings</string>
    <string name="PlannerOnOffLabel">Enable All Notification Plans</string>
    <string name="settingEnableNotiPlan">Enable Notiplan</string>
    <string name="createNewPlanText">Create New Plan</string>
    <string name="EmptyPlanListPlaceholderText">You have no Notification Plans. Why not create one?</string>
    <string name="planNameLabel">Plan Name:</string>
    <string name="CompleteCreateButton">Create</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ring_volume">Ring Volume:</string>
    <string name="activates_at">Activates at:</string>
    <string name="done">DONE</string>
    <string name="plan_manager">Plan Manager</string>
    <string name="ok">OK</string>
    <string name="versionNumber">ALPHA</string>
    <string name="versionLabel">Version:</string>
    <string name="authorLabel">Author</string>
    <string name="author">Damien Fleming</string>
    <string name="RingVolumePercent">0%</string>
    <string name="aboutText">About</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="async">Async Background Download</string>
</resources>
