<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PlanContainer"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@drawable/plan_container"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="20dp"

    android:orientation="horizontal">
    <TextView android:id="@+id/planItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:text="Plan Name"
        android:textColor="#444444"
        android:textSize="20sp"
        android:textStyle="normal" />
    <ImageButton android:id="@+id/planItemView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_view"
        android:contentDescription="@string/view" />
    <ImageButton android:id="@+id/planItemEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/edit" />
    <ImageButton android:id="@+id/planItemDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/delete" />
</LinearLayout>