<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createNewPlanText"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="32sp"
        android:padding="10sp"
        android:gravity="center"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView android:id="@+id/planNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/planNameLabel"
            android:textColor="#000000"
            android:textStyle="normal"
            android:textSize="20sp"
            android:padding="10sp"
            android:gravity="left"
            android:layout_weight="0.6"/>
        <EditText android:id="@+id/planNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="0.4"/>
    </LinearLayout>
    <Button android:id="@+id/completeCreatePlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CompleteCreateButton"
        android:textSize="20sp"
        android:padding="15sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center" />
</LinearLayout>